criacao-ec2-com-variaveis/ec2-ubuntu.tf
# Esse código faz as seguintes ações:
#  1 - Cria um servidor web usando uma EC2
#  2 - Saída do IP público do servidor web

resource "aws_instance" "web" {
  ami           = data.aws_ami.ubuntu.id
  instance_type = "t2.micro"
  subnet_id = aws_subnet.projeto.id
  security_groups = [
    aws_security_group.projeto.id
  ]
  key_name = data.aws_key_pair.chave.key_name
  associate_public_ip_address = true

  tags = {
    Name = "Web"
  }

  user_data = local.script
}

output "ip" {
  value = format(aws_instance.web.public_ip)
}
